--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 spring.application.name=Login-Implementation
 
-# MySQL Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/login_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.profiles.active=${ENV:dev}
 
-# JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+# Enable debug logging for Spring Security
+logging.level.org.springframework.security=DEBUG
